tests/ui/feature-gates/feature-gate-derive-skip.rs
#[derive(Debug)]
struct Demo {
    #[skip] //~ ERROR the `#[skip]` attribute is experimental
    f1: (),
}

fn main() {}
